# AdventOfCodeOCaml

./: .gitignore  AdventOfCodeOCaml.opam  LICENSE  Makefile  README.md  dune-project
src/main/: dune  main.ml
src/solvers/: dune  signature.ml
src/solvers/2015/: day00.ml  day01.ml  day02.ml  day03.ml  day04.ml  day05.ml  day06.ml  day07.ml  day08.ml  day09.ml  day10.ml  day11.ml  day12.ml  day13.ml  day14.ml  day15.ml  day16.ml  day17.ml  dune
src/solvers/2024/: day00.ml  dune
src/utils/: array_utils.ml  files_utils.ml  list_utils.ml  module_utils.ml  string_utils.ml
